-*-Outline-*-

LectroTest Change Log
Tom Moertel (tom@moertel.com)

* 0.3300   (2005-07-20)


** Misc

- Minor documentation tweaks for clarity.

- Minor code clean ups.


* 0.3200   (2005-03-03)

** Improvements

- You can now attach notes and variable dumps to trials.  In the
  event the trial fails, the notes will be emitted as part of the
  counterexample to aid in debugging.
      See Test::LectroTest::TestRunner::testcontroller for the
  documentation on the new $tcon->note() and $tcon->dump() methods.

- Strings in counterexamples are now printed in double-quoted form.
  This makes it easy to see invisibles.


* 0.3100   (2005-02-19)

- This release is identical to 0.3000 except that for this release I
  did not screw up the version numbering in the distribution tarball.
  (Ouch!)


* 0.3000   (2005-02-19)

** Improvements

- Full test coverage!  Devel::Coverage says that the LT unit tests now
  cover 100% of statements, branches, conditionals, and subroutines.

- Test::LectroTest now follows Test::Simple's exit-code strategy:
  The number of failures (up to 254) is reported via the exit code.

- (!) Test::LectroTest::TestRunner::run_suite now returns the number
  of properties that successfully checked.  (Before it reported 0 if
  any check failed.) !!!NOTE!!! This is an API change.  If you have
  written code that checks the result of run_suite, you will need to
  change it.

** Fixes

- An empty suite powered by Test::LectroTest now emits "1..0"
  as its sole output when previously there was no output.

** Misc

- Added a bunch of new test cases. 

- Renamed test files: from t/001.t to t/gens.t, etc.

- Removed superfluous use of Data::Dumper in t/gens.t.

- Relaxed dependencies on external packages need only for building.


* 0.2010   (2005-02-16)

** Improvements

- Now you can mix LectroTest and Test::* modules!
  Test::LectroTest::Compat provides the compatibility magic.

** Fixes

- Updated copyright notices.
